Removida a funcionalidade de de envio de email

--- a/back-end/.env
+++ b/back-end/.env
@@ -4,3 +4,6 @@ DB_PASSWORD=12345678
 DB_HOST=localhost
 DB_DIALECT=mysql
 SECRET_KEY=guilhermeemuitogostoso
+MAIL_USER=glcrypto-enterprise@outlook.pt
+MAIL_PASSWORD=22827496Guilherme#
+RECOVERY-CODE=1R3CNM885X82R3V4Q846CM5D
