--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,6 +1,7 @@
-FROM node:14
+FROM node:latest
 WORKDIR /usr/src/app
-COPY package*.json app.js ./
-RUN npm install
+COPY package.json app.js ./
+COPY . .
+RUN npm install --quiet
 EXPOSE 3000
 CMD ["node", "app.js"]
