--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -9,16 +10,23 @@
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "pg": "^8.13.1",
     "sequelize": "^6.37.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "tsup": "^8.3.5"
   },
   "name": "back-end",
   "version": "1.0.0",
   "main": "app.js",
+  "engines": {
+    "node": "18"
+  },
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node app.js",
+    "docker": "docker run guilherme/glcrypto"
   },
   "keywords": [],
   "author": "",
